--- a/.github/workflows/auto_helper.yml
+++ b/.github/workflows/auto_helper.yml
@@ -1,11 +1,8 @@
-name: Auto_Helper
+name: juejin_CheckIn
 
 on:
-  # push:
-  #   branches:
-  #     - main
   schedule:
-    - cron: "23 2 * * *" # 该时间为UTC时间，比北京时间晚8个小时，每天早上5点半自动执行
+    - cron: "30 4 * * *" # 该时间为UTC时间，比北京时间晚8个小时，每天早上5点半自动执行
 
   workflow_dispatch:
 
@@ -17,7 +14,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-      - run: npm ci
+      - run: npm i
 
   send:
     runs-on: ubuntu-latest
@@ -30,11 +27,7 @@ jobs:
       - name: Run Project
         env:
           COOKIE: ${{ secrets.COOKIE }}
-          COOKIE2: ${{ secrets.COOKIE2 }}
           USER: ${{ secrets.USER }}
           PASS: ${{ secrets.PASS }}
           TO: ${{ secrets.TO }}
-          YUN_COOKIE: ${{ secrets.YUN_COOKIE }}
-          YUN_TO: ${{secrets.YUN_TO}}
-        run: npm ci && node src/juejin.js "${COOKIE}" "${USER}" "${PASS}" "${TO}" "${YUN_COOKIE}" "${YUN_TO}"  
-        # npm ci && node src/v2free.js "${COOKIE2}" "${USER}" "${PASS}" "${TO}"
+        run: npm i && node src/juejin.js "${COOKIE}" "${USER}" "${PASS}" "${TO}"
